--- a/style.css
+++ b/style.css
@@ -201,13 +201,43 @@ p.frame_title {
 }
 
 /*PORTFOLIO*/
+.section_grise2 {
+    padding: 20px;
+}
+
+.portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px; /* Ajoute de l'espace entre les éléments */
+}
+
+.col_portfolio {
+    flex: 1 1 calc(45% - 20px); /* Ajuste la largeur des colonnes */
+    box-sizing: border-box; /* Inclut les bordures et les marges dans la largeur totale */
+    margin-bottom: 20px; /* Ajoute de l'espace en bas pour éviter le chevauchement */
+}
+
+.portfolio-table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+}
+
+.portfolio-table img {
+    width: 100%;
+    height: auto;
+}
+
+
+/* BACKUP
 .portfolio-header {
     height: 90px;
     background: url("header.jpg") no-repeat center/cover;
     position: relative;
 }
 
-/*
+
 .portfolio-header-title {
     color: white;
     font-size: 26px;
@@ -216,7 +246,7 @@ p.frame_title {
     padding-left: 8px;
     display: inline-block;
 }
-*/
+
 
 h1.portfolio {
     color: #656565;
@@ -242,6 +272,10 @@ img.portfolio {
     width: 70%;
     max-width: 475px;
 }
+
+*/
+
+
 
 /*IFRAME CONTACT*/
 iframe {
