--- a/style.css
+++ b/style.css
@@ -206,30 +206,35 @@ p.frame_title {
 }
 
 .portfolio-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
 .col_portfolio {
-    flex: 1 1 calc(50% - 20px);
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .portfolio-table {
     width: 100%;
-    flex: 1;
+    height: 100%;
     border-collapse: collapse;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .portfolio-table img {
     width: 100%;
     height: auto;
+    flex-grow: 1;
 }
 
+.portfolio-table td {
+    vertical-align: bottom;
+}
 
 
 /*
