--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ div.barre-verticale {
     width: 4px;
     background-color: var(--color_theme1);
     margin-right: 8px;
+    display: flex;
+    align-items: center; /* Centre verticalement la barre */
 }
 
 .col_portfolio {
